--- a/package.json
+++ b/package.json
@@ -12,11 +12,25 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@inrupt/vocab-common-rdf": "^1.0.5",
+    "@jeswr/rdfjs-sign": "^1.3.1",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@mui/x-date-pickers": "^7.27.3",
+    "@rollup/plugin-inject": "^5.0.5",
+    "@types/n3": "^1.24.1",
+    "moment": "^2.30.1",
+    "n3": "^1.24.2",
+    "rdf-dereference": "^4.0.0",
+    "rdf-js": "^4.0.2",
+    "rdf-parse": "^4.0.0",
+    "rdf-vocabulary": "^1.0.1",
+    "rdfjs-c14n": "^3.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.1.0",
+    "web-streams-node": "^0.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -29,6 +43,7 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
