--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://knowledgeonwebscale.github.io/rdf-context-associations-demo/",
+
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -29,6 +31,7 @@
     "rdfjs-c14n": "^3.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "uuid": "^11.1.0",
     "web-streams-node": "^0.4.0"
   },
